--- a/index.html
+++ b/index.html
@@ -1,75 +1,117 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="stylesheet" type="text/css" href="vendors/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="vendors/css/grid.css">
-	<link rel="stylesheet" type="text/css" href="resources/css/style.css">
-	<link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
-	<title>Omnifood</title>	
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" type="text/css" href="./resources/css/styleMobile.css">
+	<link rel="stylesheet" type="text/css" href="./resources/css/queries.css">
+	<title>Omnifood</title>
 </head>
 <body>
 	<header>
 		<nav>
-			<div class="row">
-				<img src="resources/images/logo-white.png" alt="omnifood logo" class="logo">
-				<ul class="main-nav">
-					<li><a href="#">Food delivery</a></li>
-					<li><a href="#">How it works</a></li>
-					<li><a href="#">Our cities</a></li>
-					<li><a href="#">Sign up</a></li>
-				</ul>
+			<img src="./resources/css/images/logo-white.png" alt="logo" class=nav__img>
+			<ul class="nav__links">
+				<li><a href="#" class="nav__link">food delivery</a></li>
+				<li><a href="#" class="nav__link">how it works</a></li>
+				<li><a href="#" class="nav__link">our cities</a></li>
+				<li><a href="#" class="nav__link">sign up</a></li>
+			</ul>
+		</nav>		
+		<div class="header__text--container">
+			<div class="header-text">
+				<h1>Goodbye junk food. <br> Hello super healthy meals</h1>
+				<a href="#" class="btn btn-full">I’m hungry</a>
+				<a href="#" class="btn btn-ghost">Show me more</a>
 			</div>
-		</nav>
-		<div class="hero-text-box">
-			<h1>Goodbye junk food. <br> Hello super healthy meals.</h1>
-			<a class="btn btn-full" href="#">I'm hungry</a>
-			<a class="btn btn-ghost" href="#">Show me more</a>
 		</div>
+
 	</header>
 
-	<section class="section-feature">
-		<div class="row">
-			<h2>Get food fast &mdash; not fast food</h2>
-			<div class="long-copy">
-				<p>
-					Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
-				</p>
-			</div>
-		</div>
-		<dir class="row">
-			<div class="col span-1-of-4 box">
-				<ion-icon name="ios-infinite" class='icon-big'></ion-icon>
+	<section class="section__feature">
+		<h2 class="feature__title">Get food fast — not fast food.</h2>
+		<p>
+			Hello, we’re Omnifood, your new premium food delivery service. We know you’re always busy. No time for cooking. So let us take care of that, we’re really good at it, we promise!
+		</p>
+		<div class="feature__features">
+			<div class="feature__open">
+				<ion-icon class="big-icon" name="ios-time"></ion-icon>
 				<h3>Up to 365 days/year</h3>
 				<p>
 					Never cook again! We really mean that. Our subscription plans include up to 365 days/year coverage. You can also choose to order more flexibly if that's your style.
-				</p>				
+				</p>
 			</div>
-
-			<div class="col span-1-of-4 box">
-				<ion-icon name="ios-stopwatch" class='icon-big'></ion-icon>
+			<div class="feature__fast">
+				<ion-icon class="big-icon" name="ios-timer"></ion-icon>
 				<h3>Ready in 20 minutes</h3>
 				<p>
-					ou're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
-				</p>				
+					You're only twenty minutes away from your delicious and super healthy meals delivered right to your home. We work with the best chefs in each town to ensure that you're 100% happy.
+				</p>
 			</div>
-			
-			<div class="col span-1-of-4 box">
-				<ion-icon name="ios-nutrition" class='icon-big'></ion-icon>
+			<div class="feature__organic">
+				<ion-icon class="big-icon" name="ios-nutrition"></ion-icon>
 				<h3>100% organic</h3>
 				<p>
 					All our vegetables are fresh, organic and local. Animals are raised without added hormones or antibiotics. Good for your health, the environment, and it also tastes better!
-				</p>				
+				</p>
 			</div>
-
-			<div class="col span-1-of-4 box">
-				<ion-icon name="ios-cart" class='icon-big'></ion-icon>
+			<div class="feature__order">
+				<ion-icon class="big-icon" name="cart"></ion-icon>
 				<h3>Order anything</h3>
 				<p>
 					We don't limit your creativity, which means you can order whatever you feel like. You can also choose from our menu containing over 100 delicious meals. It's up to you!
-				</p>				
-			</div>
-		</dir>
+				</p>
+			</div>	
+		</div>
+	</section>
+
+	<section>
+		<div class="favourite-meal">
+			<figure class="meal-image">
+				<img src="./resources/images/1.jpg" alt="Korean bibimbap with egg and vegetables">				
+			</figure>
+
+			<figure class="meal-image" >
+				<img src="./resources/images/2.jpg" alt="Simple italian pizza with cherry tomatoes">	
+			</figure>
+
+			<figure class="meal-image" >
+				<img src="./resources/images/3.jpg" alt="Chicken breast steak with vegetables">	
+			</figure>
+
+			<figure class="meal-image">
+				<img src="./resources/images/4.jpg" alt="Autumn pumpkin soup">	
+			</figure>
+
+			<figure class="meal-image">
+				<img src="./resources/images/5.jpg" alt="Paleo beef steak with vegetables">	
+			</figure>
+
+			<figure class="meal-image">
+				<img src="./resources/images/6.jpg" alt="Healthy baguette with egg and vegetables">
+			</figure>
+
+			<figure class="meal-image">
+				<img src="./resources/images/7.jpg" alt="Burger with cheddar and bacon">	
+			</figure>
+
+			<figure class="meal-image">
+				<img src="./resources/images/8.jpg" alt="Granola with cherries and strawberries">	
+			</figure>
+		</div>		
 	</section>
 	<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
 </body>
 </html>
+
+
+<!-- 
+    1. Korean bibimbap with egg and vegetables
+    2. Simple italian pizza with cherry tomatoes
+    3. Chicken breast steak with vegetables 
+    4. Autumn pumpkin soup
+    5. Paleo beef steak with vegetables
+    6. Healthy baguette with egg and vegetables
+    7. Burger with cheddar and bacon
+    8. Granola with cherries and strawberries
+-->
